src/shell/snapshots/rtx__shell__xonsh__tests__hook_init.snap
---
source: src/shell/xonsh.rs
expression: "xonsh.activate(exe, \" --status\".into())"
---
from os               import environ
from xonsh.built_ins  import XSH

envx = XSH.env
envx['PATH'].add('/some/dir')
environ['PATH'] = envx.get_detyped('PATH')

def listen_prompt(): # Hook Events
  execx($(/some/dir/rtx hook-env --status -s xonsh))

XSH.builtins.events.on_pre_prompt(listen_prompt) # Activate hook: before showing the prompt

