src/shell/snapshots/rtx__shell__xonsh__tests__set_env.snap
---
source: src/shell/xonsh.rs
expression: "Xonsh::default().set_env(\"FOO\", \"1\")"
---
from os               import environ
from xonsh.built_ins  import XSH

envx = XSH.env
envx[   'FOO'] = '1'
environ['FOO'] = envx.get_detyped('FOO')

