src/shell/snapshots/rtx__shell__xonsh__tests__unset_env.snap
---
source: src/shell/xonsh.rs
expression: "Xonsh::default().unset_env(\"FOO\")"
---
from os               import environ
from xonsh.built_ins  import XSH

envx = XSH.env
envx.pop(   'FOO',None)
environ.pop('FOO',None)

